AX: iOS: when bringing focus to a text field we may zoom the page even if author wanted max scale = 1 https://bugs.webkit.org/show_bug.cgi?id=157771

Reviewed by Tim Horton.

Source/WebCore:

If the author requests scaling not to be enabled, we should not scale in when keyboard focus moves to a text field.
Scaling should only happen when the user performs a gesture to do so in this case.

Tests: fast/viewport/ios/user-scalable-does-not-scale-for-keyboard-focus-with-author-defined-scale.html
       fast/viewport/ios/user-scalable-scales-for-keyboard-focus-with-no-author-defined-scale.html

* page/ViewportConfiguration.h:
(WebCore::ViewportConfiguration::maximumScale):

Source/WebKit2:

* Shared/AssistedNodeInformation.cpp:
(WebKit::AssistedNodeInformation::encode):
(WebKit::AssistedNodeInformation::decode):
* Shared/AssistedNodeInformation.h:
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _displayFormNodeInputView]):
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::getAssistedNodeInformation):



Canonical link: https://commits.webkit.org/176110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201294 268f45cc-cd09-0410-ab3c-d52691b4dbfc